# ai-projects

./: AMZN_top20_daily_moves_2021_2025.csv  AVGO_top20_daily_moves_2021_2025.csv  AVGO_top20_up_down_daily_moves_2021_2025.csv  Analytics2.xlsx  Analytics3.xlsx  CODE_OF_CONDUCT.md  CONTRIBUTING.md  META_top20_daily_moves_2021_2025.csv  NVDA_top20_daily_moves_2021_2025.csv  README.md  SECURITY.md  ~$Analytics2.xlsx
.github/ISSUE_TEMPLATE/: feature_request.md
AI-Garage/: PyTorchTester
Forecaster Project/: ForecasterProject.txt
Forecaster Project/UsefulFiles/: AAPL_sentiment_eps_revisions_selected_dates.csv  AAPL_social_sentiment_selected_dates.csv  AAPL_top20_daily_moves_2021_2025.csv  AAPL_top20_up_down_daily_moves_2021_2025.csv  AMZN_top20_up_down_daily_moves_2021_2025.csv  ASML_top20_daily_moves_2021_2025.csv  ASML_top20_up_down_daily_moves_2021_2025.csv  Analytics1.xlsx  Analytics2.xlsx  GOOGL_top20_daily_moves_2021_2025.csv  GOOGL_top20_up_down_daily_moves_2021_2025.csv  (+4 more)
Forecaster Project/sentiment-agent/: dockerfile  pyproject.toml
Forecaster Project/sentiment-agent/src/: agent.py  cli.py  tools.py
Forecaster Project/sentiment-agent/src/providers/: base.py  x-stub.py
Forecaster Project/stockfetcher-agent/: agent.py  api.py  cli.py  dockerfile  logging_config.py  pyproject.toml  tools.py
Greek-NotebookLM/: Greek NotebookLM.docx  Guide.txt
GreekSummarizerAgent/: docker-compose.yml  dockerfile
LLM-LAW/: RAG Setup with Greek Documents using Meltemi.docx  εγκληση.docx
LawAssist/: .dockerignore  dockerfile  requirements.txt
LawAssist/app/: config.py  (+2 more)
(+61 files in other folders)
