[project]
name = "sentiment-agent"
version = "0.1.0"
description = "AI agent that exports daily sentiment for major NASDAQ companies (CSV + Parquet)."
requires-python = ">=3.10"
dependencies = [
  "openai-agents>=0.1.0",
  "requests>=2.31.0",
  "pandas>=2.0.0",
  "pyarrow>=14.0.0",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
]

[project.scripts]
sentiment-agent = "sentiment_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]